...
            android:padding="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp">

            <EditText
                android:id="@+id/eventNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Event Name" />

            <EditText
                android:id="@+id/eventDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Event Description" />


            <EditText
                android:id="@+id/waitingListCountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:inputType="number"
                android:hint="Waiting List Count (leave blank if no limit)" />

            <EditText
                android:id="@+id/lotteryCountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Lottery Count" />

            <!-- Select Event Time -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eventTimeTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Select Event Time"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registrationDeadlineTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Select Registration Deadline"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lotteryTimeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Select Lottery Time"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"
...
            android:text="  Require Location Access"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <!-- Create Event Button outside the grey background -->
    <Button
        android:id="@+id/createEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Event" />
</LinearLayout>
    </ScrollView>

