<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="My Events" />
    <item
        android:id="@+id/navigation_new"
        android:icon="@drawable/baseline_add_box_24"
        android:title="Create Event" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="Profile" />
...
