...
        android:id="@+id/button_entrant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Entrant" />

    <Button
        android:id="@+id/button_organizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Organizer" />
</LinearLayout>

